# libhybris

./: .gitignore
hybris/: Makefile.am  configure.ac
hybris/a10/: .gitignore  Makefile  depends.mk
hybris/a10/android/: Makefile
hybris/tests/: test_glesv2.c
hybris/vecore/: Makefile.am  vecore.c
